# BinanceDataCollector

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  config.json  main.cpp
cmake/: Coverage.cmake
deploy/linux/: binancedatacollector.service
src/: CMakeLists.txt
src/app/: App.cpp  App.h  ArgParser.h  CMakeLists.txt  main.cpp
src/config/: AppConfig.h  CMakeLists.txt  IConfigReader.h  JsonConfigReader.cpp  JsonConfigReader.h
src/logging/: CMakeLists.txt  ILogger.h  LogLevel.h  SpdlogLogger.cpp  SpdlogLogger.h
src/market/: CMakeLists.txt  IAggregator.h  IMonitoringService.h  MonitoringService.cpp  MonitoringService.h  TradeAggregator.cpp  TradeAggregator.h  TradeEvent.h
src/network/: BinanceWebSocketClient.cpp  BinanceWebSocketClient.h  CMakeLists.txt  IWebSocketClient.h
src/serialization/: CMakeLists.txt  FileSerializer.cpp  FileSerializer.h  ISerializer.h  WindowStats.h
tests/: CMakeLists.txt  test.cpp
tests/app/: ArgParserTests.cpp
tests/config/: ConfigLoaderTests.cpp
tests/logging/: LoggerTests.cpp
tests/market/: MonitoringServiceTests.cpp  TradeAggregatorTests.cpp
tests/network/: BinanceWebSocketClientIntegrationTests.cpp  BinanceWebSocketClientTests.cpp
tests/serialization/: FileSerializerTests.cpp
